# latvian-street-analyzer

./: main.py  pyproject.toml  readme.md
