[project]
name = "latvian-street-analyzer"
version = "1.0"
description = "A simple script that receives data from Wikipedia in latvian language and compares whether the streets are recorded in accordance with the freely available data of the Latvia cadastral resource."
authors = ["Iaroslav Viazmitin <iaroslav.viazmitin@edu.rtu.lv>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "inquirerpy==0.3.4",
    "requests==2.32.3",
]
